コンテンツ素案

--- a/index.html
+++ b/index.html
@@ -2,11 +2,36 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta content="width=device-width;initial-scale=1.0;user-scalable=no;" name="viewport" />
+  <meta name="keywords" content="Gotanda.js,JavaScript,Node.js,プログラミング,勉強会,五反田">
+  <meta name="description" content="jsについて五反田や沖縄で話します">
 
   <title>Gotanda.js</title>
 
 </head>
 <body>
-  <h1>Gotanda.js</h1>
+
+  <header>
+    <h1>Gotanda.js</h1>
+  </header>
+
+  <section>
+    <h2>About</h2>
+    <p>jsについて五反田や沖縄で話します</p>
+  </section>
+
+  <section>
+    <h2>Event</h2>
+    <a href="http://gotandajs.connpass.com/event/20838/" target="_blank">gotanda.js #1 in Mobile Factory - connpass</a>
+  </section>
+
+  <section>
+    <h2>Slack</h2>
+    <script async defer src="https://gotandajs.herokuapp.com/slackin.js?large"></script>
+  </section>
+
+  <footer>
+  </footer>
+
 </body>
 </html>
