--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <section>
     <h2>Slack</h2>
-    <script async defer src="https://gotandajs.herokuapp.com/slackin.js?large"></script>
+    <script async defer src="https://gotandajs.pine.moe/slackin.js?large"></script>
   </section>
 
   <footer>
