--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <title>Gotanda.js</title>
 
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:700" />
   <link rel="stylesheet" href="./public/index.css" />
 </head>
 <body>
