--- a/index.html
+++ b/index.html
@@ -19,17 +19,39 @@
 
   <section>
     <h2>About</h2>
-    <p>jsについて五反田や沖縄で話します</p>
+    <p>
+      Gotanda.js は五反田を中心に活動する JavaScript ユーザーのコミュニティです。
+      イベント(勉強会)を定期的に開催したり、Slack で JavaScript に関する雑談をしていたりします。
+      五反田近辺の方に限らず、JavaScript に興味があればどなたでも歓迎いたします。
+    </p>
   </section>
 
   <section>
-    <h2>Event</h2>
-    <a href="http://gotandajs.connpass.com/event/20838/" target="_blank">gotanda.js #1 in Mobile Factory - connpass</a>
+    <h2>Next Event</h2>
+    <a href="http://gotandajs.connpass.com/event/20838/" target="_blank">
+      2015/10/28(水) 19:30〜<br/>
+      Gotanda.js #1 in Mobile Factory
+    </a>
   </section>
 
   <section>
-    <h2>Slack</h2>
+    <h2>Join Slack</h2>
+    <p>
+      以下のボタンからメールアドレスを入力することで、Slack チームへの招待メールをお送りします。
+      気軽にご参加ください！
+    </p>
     <script async defer src="https://gotandajs-pinemz2.rhcloud.com/slackin.js?large"></script>
+  </section>
+
+  <section>
+    <h2>Contact</h2>
+    <p>
+      質問等ありましたら Slack や Twitter で
+      <a href="https://twitter.com/hoto17296" target="_blank">@hoto17296</a>
+      または
+      <a href="https://twitter.com/pine613" target="_blank">@pine613</a>
+      までお問い合わせください。
+    </p>
   </section>
 
   <footer>
