--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta content="width=device-width; initial-scale=1.0; user-scalable=no;" name="viewport" />
-  <meta name="keywords" content="Gotanda.js,JavaScript,Node.js,プログラミング,勉強会,五反田">
+  <meta name="keywords" content="Gotanda.js,JavaScript,Node.js,コミュニティ,プログラミング,勉強会,五反田,東京">
   <meta name="description" content="Gotanda.js は五反田を中心に活動する JavaScript ユーザーのコミュニティです。">
 
   <title>Gotanda.js</title>
