update Next Event

--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
 
   <section>
     <h2>Next Event</h2>
-    <a href="http://gotandajs.connpass.com/event/20838/" target="_blank">
-      2015/10/28(水) 19:30〜<br/>
-      Gotanda.js #1 in Mobile Factory
-    </a>
+    <span>
+      2016/1/8(金) 19:30〜<br/>
+      Gotanda.js #2 in GaiaX
+    </span>
+    <p>詳細はもうしばらくお待ち下さい！</p>
   </section>
 
   <section>
