アイコン変更

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
   <title>Gotanda.js</title>
 
-  <link rel="icon" href="/favicon.ico" sizes="16x16" type="image/vnd.microsoft.icon">
+  <link rel="icon" href="./icon.png" />
+  <link rel="apple-touch-icon" href="./icon.png" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:700" />
   <link rel="stylesheet" href="./public/index.css" />
   <script src="./public/bundle.min.js" defer></script>
