招待フォーム ビューだけ

--- a/index.html
+++ b/index.html
@@ -40,13 +40,18 @@
     <p>詳細はもうしばらくお待ち下さい！</p>
   </section>
 
-  <section>
+  <section id="slack">
     <h2>Join Slack</h2>
     <p>
       以下のボタンからメールアドレスを入力することで、Slack チームへの招待メールをお送りします。
       気軽にご参加ください！
     </p>
-    <script async defer src="https://gotandajs-pinemz2.rhcloud.com/slackin.js?large"></script>
+    <form>
+      <label for="email"></label>
+      <input type="text" name="email" id="email" placeholder="you@yourdomain.com" />
+      <a href="#">JOIN</a>
+    </form>
+    <p>n 人が登録 / 現在 n 人がオンライン</p>
   </section>
 
   <section>
