招待フォーム JS

--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
   <section id="slack">
     <h2>Join Slack</h2>
     <p>
-      以下のボタンからメールアドレスを入力することで、Slack チームへの招待メールをお送りします。
+      以下のフォームにメールアドレスを入力すると Slack チームへの招待メールをお送りします。
       気軽にご参加ください！
     </p>
     <form>
       <label for="email"></label>
       <input type="text" name="email" id="email" placeholder="you@yourdomain.com" />
-      <a href="#">JOIN</a>
+      <a href="#"></a>
     </form>
-    <p>n 人が登録 / 現在 n 人がオンライン</p>
+    <p>計 n 人が参加 / 現在 n 人がオンライン</p>
   </section>
 
   <section>
