招待メールが送られない問題 暫定対応

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
   <section>
     <h2>Join Slack</h2>
     <p>
-      以下のボタンからメールアドレスを入力することで、Slack チームへの招待メールをお送りします。
+      以下のリンクから Gotanda.js の Slack グループへ参加することが出来ます。
       気軽にご参加ください！
     </p>
-    <script async defer src="https://gotandajs-pinemz2.rhcloud.com/slackin.js?large"></script>
+    <a href="http://gotandajs.pine.moe/" target="_blank">Join Gotanda.js on Slack!</a>
   </section>
 
   <section>
