人数を取得

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
       <input type="text" name="email" id="email" placeholder="you@yourdomain.com" />
       <a href="#"></a>
     </form>
-    <p>計 n 人が参加 / 現在 n 人がオンライン</p>
+    <p class="slack_status">
+      現在 <span class="total">-</span> 人中 <span class="online">-</span> 人がオンライン
+    </p>
   </section>
 
   <section>
