React で書き直し

--- a/index.html
+++ b/index.html
@@ -46,14 +46,7 @@
       以下のフォームにメールアドレスを入力すると Slack チームへの招待メールをお送りします。
       気軽にご参加ください！
     </p>
-    <form>
-      <label for="email"></label>
-      <input type="text" name="email" id="email" placeholder="you@yourdomain.com" />
-      <a href="#"></a>
-    </form>
-    <p class="slack_status">
-      現在 <span class="total">-</span> 人中 <span class="online">-</span> 人がオンライン
-    </p>
+    <div id="slack_form"></div>
   </section>
 
   <section>
