ごたじぇー

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <section>
     <h2>About</h2>
     <p>
-      Gotanda.js は五反田を中心に活動する JavaScript ユーザーのコミュニティです。
+      Gotanda.js (ごたじぇー) は五反田を中心に活動する JavaScript ユーザーのコミュニティです。
       イベント(勉強会)を定期的に開催したり、Slack で JavaScript に関する雑談をしていたりします。
       五反田近辺の方に限らず、JavaScript に興味があればどなたでも歓迎いたします。
     </p>
