--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
 
   <section>
     <h2>Next Event</h2>
-    <span>
+    <a href='http://gotandajs.connpass.com/event/22162/' target='_blank'>
       2016/1/8(金) 19:30〜<br/>
-      Gotanda.js #2 in GaiaX
-    </span>
-    <p>詳細はもうしばらくお待ち下さい！</p>
+      Gotanda.js #2 〜 JS 新年会 〜 in GaiaX
+    </a>
   </section>
 
   <section id="slack">
