--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
 
   <section>
     <h2>Next Event</h2>
-    <a href='http://gotandajs.connpass.com/event/22162/' target='_blank'>
-      2016/1/8(金) 19:30〜<br/>
-      Gotanda.js #2 〜 JS 新年会 〜 in GaiaX
-    </a>
+    <span>
+      2016/03/11 (金) 19:30〜<br />
+      Gotanda.js #3 in freee
+    </span>
+    <p>詳細はもうしばらくお待ち下さい！</p>
   </section>
 
   <section id="slack">
