--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
 
   <section>
     <h2>Next Event</h2>
-    <span>
+    <a href='http://gotandajs.connpass.com/event/26027/' target='_blank'>
       2016/03/11 (金) 19:30〜<br />
       Gotanda.js #3 in freee
-    </span>
-    <p>詳細はもうしばらくお待ち下さい！</p>
+    </a>
   </section>
 
   <section id="slack">
