--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
   <link rel="icon" href="./icon.png" />
   <link rel="apple-touch-icon" href="./icon.png" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:700" />
-  <link rel="stylesheet" href="./public/index.css" />
-  <script src="./public/bundle.min.js" defer></script>
-  <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) })(window,document,'script','//www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-68767750-1', 'auto'); ga('send', 'pageview');</script>
+  <script src="./lib/bundle.js" defer></script>
 </head>
 <body>
 
