--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
   <section>
     <h2>Next Event</h2>
-    <a href='http://gotandajs.connpass.com/event/26027/' target='_blank'>
-      2016/03/11 (金) 19:30〜<br />
-      Gotanda.js #3 in freee
-    </a>
+    <span>
+      Gotanda.js #4
+    </span>
+    <p>詳細はもうしばらくお待ち下さい！</p>
   </section>
 
   <section id="slack">
