--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <section>
     <h2>Next Event</h2>
     <span>
-      Gotanda.js #4
+      Gotanda.js #4 in Retty (6/3)
     </span>
     <p>詳細はもうしばらくお待ち下さい！</p>
   </section>
