--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
 
   <section>
     <h2>Next Event</h2>
-    <span>
-      Gotanda.js #4 in Retty (6/3)
-    </span>
-    <p>詳細はもうしばらくお待ち下さい！</p>
+    <a href='http://gotandajs.connpass.com/event/30961/' target='_blank'>
+      6/3(金) Gotanda.js #4 in Retty
+    </a>
   </section>
 
   <section id="slack">
