--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <section>
     <h2>Next Event</h2>
-    <a href='http://gotandajs.connpass.com/event/30961/' target='_blank'>
+    <a href='/blog/2016/05/17/event4retty/' target='_blank'>
       6/3(金) Gotanda.js #4 in Retty
     </a>
   </section>
