--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
 
   <section>
     <h2>Next Event</h2>
-    <a href='/blog/2016/05/17/event4retty/'>
-      6/3(金) Gotanda.js #4 in Retty
-    </a>
+    <span>
+      Gotanda.js #5
+    </span>
+    <p>詳細はもうしばらくお待ち下さい！</p>
   </section>
 
   <section id="slack">
