--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
   <section>
     <h2>Next Event</h2>
-    <span>
-      Gotanda.js #5 in TORETA (9/2)
-    </span>
-    <p>詳細はもうしばらくお待ち下さい！</p>
+    <a href="http://gotandajs.connpass.com/event/33454/" target="_blank">
+      2016/09/02 (金) 19:30〜<br />
+      Gotanda.js #5 in TORETA
+    </a>
   </section>
 
   <section id="slack">
