--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <section>
     <h2>Next Event</h2>
     <span>
-      Gotanda.js #6
+      Gotanda.js #6 in Oisix (11/25)
     </span>
     <p>詳細はもうしばらくお待ち下さい！</p>
   </section>
