--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
   <section>
     <h2>Next Event</h2>
     <span>
-      Gotanda.js #6 in Oisix (12/02)
+      <a href="http://gotandajs.connpass.com/event/42328/" target="_blank">
+        2016/12/02 (金) 19:30〜<br>
+        Gotanda.js #6 in Oisix
+      </a>
     </span>
-    <p>詳細はもうしばらくお待ち下さい！</p>
   </section>
 
   <section id="slack">
