次は合同開催!

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <section>
     <h2>Next Event</h2>
     <span>
-      Gotanda.js #7
+      Meguro.es x Gotanda.js #1
     </span>
     <p>詳細はもうしばらくお待ち下さい！</p>
   </section>
