--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
   <title>Gotanda.js</title>
 
-  <link rel="icon" href="/icon.png" />
-  <link rel="apple-touch-icon" href="/icon.png" />
+  <link rel="icon" href="/assets/icon.png" />
+  <link rel="apple-touch-icon" href="/assets/icon.png" />
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Montserrat:700" />
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
   <link rel="stylesheet" href="/assets/style.css" />
