募集開始したよ

--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
   <section>
     <h2>Next Event</h2>
     <span>
-      Meguro.es x Gotanda.js #1
+      <a href="https://meguroes.connpass.com/event/49543/" target="_blank">
+        2017/04/28 (金) 19:30〜<br>
+        Meguro.es x Gotanda.js #1 in Drecom
+      </a>
     </span>
-    <p>詳細はもうしばらくお待ち下さい！</p>
   </section>
 
   <section id="slack">
