乞うご期待！

--- a/index.html
+++ b/index.html
@@ -43,11 +43,9 @@
   <section>
     <h2>Next Event</h2>
     <span>
-      <a href="https://meguroes.connpass.com/event/49543/" target="_blank">
-        2017/04/28 (金) 19:30〜<br>
-        Meguro.es x Gotanda.js #1 in Drecom
-      </a>
+      Gotanda.js #8 in Nextbeat (7/14)
     </span>
+    <p>詳細はもうしばらくお待ち下さい！</p>
   </section>
 
   <section id="slack">
