募集開始したよ!

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
   <section>
     <h2>Next Event</h2>
     <span>
-      Gotanda.js #8 in Nextbeat (7/14)
+      <a href="https://gotandajs.connpass.com/event/57562/" target="_blank">
+        2017/07/14 (金) 19:30〜<br>
+        Gotanda.js #8 in Nextbeat
+      </a>
     </span>
     <p>詳細はもうしばらくお待ち下さい！</p>
   </section>
