--- a/index.html
+++ b/index.html
@@ -43,11 +43,9 @@
   <section>
     <h2>Next Event</h2>
     <span>
-      <a href="https://gotandajs.connpass.com/event/57562/" target="_blank">
-        2017/07/14 (金) 19:30〜<br>
-        Gotanda.js #8 in Nextbeat
-      </a>
+      Gotanda.js #9
     </span>
+    <p>詳細はもうしばらくお待ち下さい！</p>
   </section>
 
   <section id="slack">
