--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
   <section>
     <h2>Next Event</h2>
     <span>
-      Gotanda.js #9
+      <a href="https://gotandajs.connpass.com/event/66262/" target="_blank">
+        2017/10/06 (金) 19:30〜<br>
+        Gotanda.js #9 in adish
+      </a>
     </span>
-    <p>詳細はもうしばらくお待ち下さい！</p>
   </section>
 
   <section id="slack">
