update_new_event_url

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <h2>Next Event</h2>
     <span>
       <a href="https://gotandajs.connpass.com/event/66262/" target="_blank">
-        2017/10/06 (金) 19:30〜<br>
-        Gotanda.js #9 in adish
+        2019/5/10 (金) 19:30〜<br>
+        Gotanda.js #11 in MobileFactory
       </a>
     </span>
   </section>
