--- a/index.html
+++ b/index.html
@@ -43,11 +43,9 @@
   <section>
     <h2>Next Event</h2>
     <span>
-      <a href="https://gotandajs.connpass.com/event/127779/" target="_blank">
-        2019/5/10 (金) 19:30〜<br>
-        Gotanda.js #11 in MobileFactory
-      </a>
+      Gotanda.js #12
     </span>
+    <p>詳細はもうしばらくお待ち下さい！</p>
   </section>
 
   <section id="slack">
