Twitter アカウントを公式に変更

--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
     <h2>Contact</h2>
     <p>
       質問等ありましたら Slack や Twitter で
-      <a href="https://twitter.com/hoto17296" target="_blank">@hoto17296</a>
-      または
-      <a href="https://twitter.com/pine613" target="_blank">@pine613</a>
+      <a href="https://twitter.com/gotandajs" target="_blank">@gotandajs</a>
       までお問い合わせください。
     </p>
   </section>
