--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
   <section>
     <h2>Next Event</h2>
     <span>
-      Gotanda.js #12
+      <a href="https://gotandajs.connpass.com/event/132152/" target="_blank">
+        2019/7/26 (金) 19:30〜<br>
+        Gotanda.js #12 in ZEALS
+      </a>
     </span>
-    <p>詳細はもうしばらくお待ち下さい！</p>
   </section>
 
   <section id="slack">
