change event url into #13

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
   <section>
     <h2>Next Event</h2>
     <span>
-      <a href="https://gotandajs.connpass.com/event/132152/" target="_blank">
-        2019/7/26 (金) 19:30〜<br>
-        Gotanda.js #12 in ZEALS
+      <a href="https://gotandajs.connpass.com/event/144221/" target="_blank">
+        2019/10/4 (金) 19:30〜<br>
+        Gotanda.js #13 in freee
       </a>
     </span>
   </section>
