set next event #14 in adish

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
   <section>
     <h2>Next Event</h2>
     <span>
-      <a href="https://gotandajs.connpass.com/event/132152/" target="_blank">
-        2019/7/26 (金) 19:30〜<br>
-        Gotanda.js #12 in ZEALS
+      <a href="https://gotandajs.connpass.com/event/165002/" target="_blank">
+        2020/2/28 (金) 19:30〜<br>
+        Gotanda.js #14 in adish
       </a>
     </span>
   </section>
